--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "author": "André L. Adriano",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "pg": "^8.2.1",
+    "dotenv": "^8.2.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
@@ -27,6 +31,7 @@
     "eslint-plugin-import": "^2.20.2",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
+    "ts-node": "^8.10.2",
     "typescript": "^3.9.3"
   }
 }
