--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
       "sourceMap": true,
       "module": "commonjs",
       "moduleResolution": "node",
-      "allowSyntheticDefaultImports": true
+      "allowSyntheticDefaultImports": true,
+      "baseUrl": ".",
+      "paths": {
+        "~*": ["./src/*"]
+      }
     }
   }
