--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.9",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
