--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT=3333
 
-PGHOST=
-PGUSER=
-PGDATABASE=
-PGPASSWORD=
-PGPORT=
+PGHOST=localhost
+PGUSER=postgres
+PGDATABASE=next_level
+PGPASSWORD=root
+PGPORT=5432
