--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
   "scripts": {
     "dev": "node bundler.dev.js",
     "build": "parcel build -t node src/server.ts",
+
     "db:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "db:rollback": "knex --knexfile knexfile.ts migrate:rollback",
-    "db:seed": "knex  --knexfile knexfile.ts seed:run"
+    "db:seed": "knex --knexfile knexfile.ts seed:run",
+
+    "pg:create": "docker-compose up -d --build",
+    "pg:console": "docker-compose exec db psql -U postgres",
+    "pg:destroy": "docker-compose down",
+    "pg:start" : "docker-compose start",
+    "pg:stop": "docker-compose stop"
   },
   "keywords": [
     "next-level"
