--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
   "scripts": {
     "dev": "node bundler.dev.js",
     "build": "parcel build -t node src/server.ts",
-
     "db:migrate": "knex --knexfile knexfile.ts migrate:latest",
     "db:rollback": "knex --knexfile knexfile.ts migrate:rollback",
     "db:seed": "knex --knexfile knexfile.ts seed:run",
-
     "pg:create": "docker-compose up -d --build",
     "pg:console": "docker-compose exec db psql -U postgres",
     "pg:destroy": "docker-compose down",
-    "pg:start" : "docker-compose start",
+    "pg:start": "docker-compose start",
     "pg:stop": "docker-compose stop"
   },
   "keywords": [
@@ -28,12 +26,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "knex": "^0.21.1",
+    "multer": "^1.4.2",
     "pg": "^8.2.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/multer": "^1.4.3",
     "@types/node": "^14.0.9",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
